@@ -1,3 +1,4 @@
+Jun 17 2003  2.9.1  Hopefully fixed gps with new packet path
 Jun 15 2003  2.9.1  Fixed to handle ENOBUF cleanly in IPC
                     Rolled in OSX/Viha support from Sushila :)
                     Updated docs to reflect Viha support
